<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_buffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/black"
            android:text="@string/useBuffer"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_compose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/black"
            android:text="@string/useCompose"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_concat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/black"
            android:text="@string/useConcat"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_concat_array"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/black"
            android:text="@string/useConcatArray"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_merge_array"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/black"
            android:text="@string/useMergeArray"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_thread_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/black"
            android:text="@string/useThreadSwitch"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/black"
            android:text="@string/useFilter"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_flatmap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/black"
            android:text="@string/useFlatmap"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_use_my_rxjava"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/black"
            android:text="@string/useMyRxJava"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>